Testing border issues on mobile

--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -37,7 +37,6 @@
 }
 
 #profileDescriptions {
-  padding-top: 15px;
   padding-left: 20px;
   justify-content: space-around;
   height: inherit;
